@@ -103,7 +103,7 @@ public class ClanResign extends StdCommand
 							S.setScript(C.getGovernment().getExitScript());
 							final CMMsg msg2=CMClass.getMsg(mob,mob,null,CMMsg.MSG_OK_VISUAL,null,null,L("CLANEXIT"));
 							S.executeMsg(mob, msg2);
-							S.dequeResponses();
+							S.dequeResponses(null);
 							S.tick(mob,Tickable.TICKID_MOB);
 						}
 						CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.CLANMEMBERS, -1, C);
