@@ -634,7 +634,7 @@ public class CharCreation extends StdLibrary implements CharCreationLibrary
 			mob.setLocation(CMLib.map().getRandomRoom());
 			final CMMsg msg2=CMClass.getMsg(mob,mob,null,CMMsg.MSG_OK_VISUAL,null,null,L("CHARCREATION"));
 			S.executeMsg(mob, msg2);
-			S.dequeResponses();
+			S.dequeResponses(null);
 			S.tick(mob,Tickable.TICKID_MOB);
 			mob.setLocation(oldRoom);
 		}
