@@ -4,6 +4,7 @@
   3. Ability CODES & DOMAINS can now be added to via the INI file/control panel.
   4. Deity powers, curses, blessings all now support arguments
   5. New skill: Improved Revoke
+  6. GenAbilities: better argument parsing (see Game Builders Guide)
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
